--- a/app/src/main/res/layout/activity_catch_entry_metric.xml
+++ b/app/src/main/res/layout/activity_catch_entry_metric.xml
@@ -18,7 +18,7 @@
         android:layout_marginTop="39dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="26dp"
-        android:text="todays fishing log Metric"
+        android:text="CMeter fishing log "
         android:textAllCaps="true"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -32,66 +32,81 @@
         android:id="@+id/btnSetUpCM"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="20dp"
         android:text="@string/goto_SetUp_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/txtTodaysLogMetric" />
 
     <!-- Weight Label -->
 
-    <!-- Lbs Spinner -->
     <TextView
         android:id="@+id/lengthLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="148dp"
         android:text="Centimeters:"
+        android:gravity="top"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Centimeter Spinner -->
-
-    <Spinner
-        android:id="@+id/centimeterSpinner"
-        android:layout_width="80dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintStart_toEndOf="@id/lengthLabel"
-        app:layout_constraintTop_toTopOf="@id/lengthLabel" />
-
-    <TextView
-        android:id="@+id/centimeterText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Centimeters"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="@id/centimeterSpinner"
-        app:layout_constraintStart_toEndOf="@id/centimeterSpinner"
-        android:layout_marginStart="8dp"/>
-
-    <!-- Decimal Spinner -->
-
-    <Spinner
-        android:id="@+id/decSpinner"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        app:layout_constraintStart_toEndOf="@id/centimeterText"
-        app:layout_constraintTop_toTopOf="@id/centimeterSpinner" />
+        app:layout_constraintTop_toTopOf="@id/btnSetUpCM" />
 
     <TextView
         android:id="@+id/decText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="decs"
-        android:textSize="16sp"
-        app:layout_constraintTop_toTopOf="@id/decSpinner"
-        app:layout_constraintStart_toEndOf="@id/decSpinner"
-        android:layout_marginStart="8dp"/>
+        android:layout_marginStart="5dp"
+        android:text="XX.X"
+        android:textScaleX="1.75"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toEndOf="@id/lengthLabel"
+        app:layout_constraintTop_toTopOf="@id/lengthLabel" />
+
+    <!-- Centimeter Spinner -->
+
+
+    <Spinner
+        android:id="@+id/tensSpinner"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@id/lengthLabel"
+        app:layout_constraintTop_toBottomOf="@id/lengthLabel" />
+
+    <Spinner
+        android:id="@+id/centimeterSpinner"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toTopOf="@id/tensSpinner"
+        app:layout_constraintStart_toEndOf="@id/tensSpinner"
+        app:layout_constraintTop_toBottomOf="@id/lengthLabel" />
+
+    <TextView
+        android:id="@+id/decTxt"
+        android:layout_width="20dp"
+        android:layout_height="wrap_content"
+        android:gravity="end"
+        android:text="'"
+        android:textSize="60sp"
+        android:textStyle="bold"
+        app:layout_constraintBaseline_toTopOf="@id/saveCatchButton"
+        app:layout_constraintStart_toEndOf="@id/centimeterSpinner" />
+    <!-- Decimal Spinner -->
+
+    <Spinner
+        android:id="@+id/decimalSpinner"
+        android:layout_width="80dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        app:layout_constraintStart_toEndOf="@id/decText"
+        app:layout_constraintTop_toTopOf="@id/tensSpinner"/>
+
+
+
 
     <!-- Species Spinner -->
     <Spinner
@@ -103,9 +118,10 @@
         android:layout_marginStart="16dp"
         android:background="@color/clip_white"
         android:entries="@array/species_list"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toStartOf="@id/saveCatchButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/saveCatchButton" />
+        app:layout_constraintTop_toBottomOf="@id/centimeterSpinner" />
 
 
     <!-- Save Button -->
@@ -114,11 +130,12 @@
         android:id="@+id/saveCatchButton"
         android:layout_width="199dp"
         android:layout_height="53dp"
-        android:layout_marginTop="192dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="5dp"
         android:text="@string/save_catch"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/centimeterSpinner"
         app:layout_constraintEnd_toEndOf="parent" />
 
 
@@ -131,9 +148,12 @@
         android:dividerHeight="1dp"
         android:scrollbars="vertical"
         android:padding="8dp"
-        app:layout_constraintTop_toBottomOf="@id/saveCatchButton"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/speciesSpinner"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
