--- a/app/src/main/res/layout/activity_set_up_event.xml
+++ b/app/src/main/res/layout/activity_set_up_event.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,7 +13,7 @@
     <ImageView
         android:id="@+id/imgVCC"
         android:layout_width="391dp"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:adjustViewBounds="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,57 +21,60 @@
         app:layout_constraintWidth_percent="0.9"
         app:srcCompat="@drawable/voice_controlled_culling_words" />
 
+
     <ImageView
         android:id="@+id/imgSetUp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:adjustViewBounds="true"
         app:layout_constraintTop_toBottomOf="@id/imgVCC"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/set_up_word_stoked" />
 
+
+
     <!-- Main Content LinearLayout -->
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/imgSetUp"
+        android:padding="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/imgSetUp">
 
         <!-- Measurement Type Header -->
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:gravity="center"
             android:text="Type of Measuring"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginBottom="8dp" />
+            android:textStyle="bold" />
 
         <!-- Weight & Length Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnWeight"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
+                android:layout_weight="1"
                 android:text="Weight"
                 android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btnLength"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
+                android:layout_weight="1"
                 android:text="Length"
                 android:textSize="18sp" />
         </LinearLayout>
@@ -80,72 +84,75 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="7dp"
+            android:gravity="center"
             android:text="Type of Units"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="16dp" />
+            android:textStyle="bold" />
 
         <!-- Imperial & Metric Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:gravity="center"
-            android:layout_marginTop="8dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnImperial"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
+                android:layout_weight="1"
                 android:text="Imperial"
                 android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btnMetric"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
+                android:layout_weight="1"
                 android:text="Metric"
                 android:textSize="18sp" />
+
         </LinearLayout>
 
         <!-- Fun Day & Tournament Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="16dp"
             android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btnFunDay"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
+                android:layout_weight="1"
                 android:text="Fun Day"
                 android:textSize="18sp" />
 
             <Button
                 android:id="@+id/btnTournament"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="50dp"
-                android:text="Tournament Day"
+                android:layout_weight="1"
+                android:text="Tournament"
                 android:textSize="18sp" />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
             android:gravity="center"
-            android:layout_marginTop="16dp">
+            android:orientation="horizontal">
+
             <!-- Go to Catch Page Button -->
 
             <Button
-                android:id="@+id/btnSelectFishingEvent"
+                android:id="@+id/btnStartFishing"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -154,28 +161,119 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/btnTournament" />
+
+
         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginTop="2dp">
 
-        <!--CanAm Flag -->
-        <ImageView
-            android:id="@+id/can_amIMG"
-            android:layout_width="97dp"
-            android:layout_height="81dp"
-            android:contentDescription="@string/canam_Image"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/btnSelectFishingEvent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTourneyValue"
-            app:layout_constraintWidth="wrap_content"
-            app:srcCompat="@drawable/can_am_flag" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <!--CanAm Flag -->
+
+            <TextView
+                android:id="@+id/txtLimit_Marker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Limit#    Colors/Letters"
+                android:textSize="26sp"
+                android:textStyle="bold"
+                android:textColor="@color/black"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <!--Tournament Limit Marker Set Up  -->
+
+            <ToggleButton
+                android:id="@+id/tglCullingValue"
+                android:layout_width="65dp"
+                android:layout_height="60dp"
+                android:layout_marginTop="5dp"
+                android:visibility="invisible"
+                android:textOff="4"
+                android:textOn="5"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnStartFishing"
+                app:layout_constraintTop_toBottomOf="@+id/txtTourneyValue"
+                app:layout_constraintWidth="wrap_content" />
+
+            <ToggleButton
+                android:id="@+id/tglColorLetter"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:layout_marginTop="5dp"
+                android:visibility="invisible"
+                android:textOff="Colors"
+                android:textOn="Letters"
+                android:textSize="34sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btnStartFishing"
+                app:layout_constraintTop_toBottomOf="@+id/txtTourneyValue"
+                app:layout_constraintWidth="wrap_content" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <!--CanAm Flag -->
+
+            <TextView
+                android:id="@+id/txtSpeciesSelector"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Species"
+                android:textColor="@color/black"
+                android:textSize="26sp"
+                android:textStyle="bold"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <Spinner
+                android:id="@+id/spinnerTournamentSpecies"
+                android:layout_width="wrap_content"
+                android:layout_height="50dp"
+                android:layout_marginStart="20dp"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:entries="@array/species_list" />
+
+
+
+        </LinearLayout>
+
+
     </LinearLayout>
 
-    </LinearLayout>
+
 
 
 
