--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.BassAnglerTracker" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Theme.BassAnglerTracker" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorPrimary">@color/purple_500</item>
         <item name="android:windowBackground">@color/white</item>
     </style>
