--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -207,7 +207,7 @@
         app:layout_constraintWidth_percent="0.4" />
 
     <TextView
-        android:id="@+id/secDecWeight"
+        android:id="@+id/secondDecWeight"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.085"
@@ -238,8 +238,8 @@
         android:textSize="45sp"
         android:textStyle="bold"
         app:layout_constraintHeight_percent="0.085"
-        app:layout_constraintStart_toStartOf="@id/secDecWeight"
-        app:layout_constraintTop_toBottomOf="@+id/secDecWeight"
+        app:layout_constraintStart_toStartOf="@id/secondDecWeight"
+        app:layout_constraintTop_toBottomOf="@+id/secondDecWeight"
         app:layout_constraintWidth_percent="0.4" />
 
     <TextView
