--- a/app/src/main/res/layout/activity_tournament_view.xml
+++ b/app/src/main/res/layout/activity_tournament_view.xml
@@ -85,8 +85,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="5dp"
-        android:background="#80E89642"
-        android:backgroundTint="@color/softlock_blue"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -105,8 +104,7 @@
         app:layout_constraintWidth_percent="0.4"
         app:layout_constraintHeight_percent="0.085"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_green"
-        android:backgroundTint="@color/softlock_green"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -121,8 +119,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_white"
-        android:backgroundTint="@color/clip_white"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -139,7 +136,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_red"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -157,7 +154,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         app:layout_constraintHeight_percent="0.085"
-        android:background="@color/clip_yellow"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -173,7 +170,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_orange"
+        android:background="@color/grey"
         android:gravity="center"
         android:text="3 Lbs"
         android:textAlignment="center"
@@ -193,8 +190,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
         android:layout_marginStart="5dp"
-        android:background="#80E89642"
-        android:backgroundTint="@color/softlock_blue"
+        android:background="@color/grey"
         android:gravity="center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
@@ -213,8 +209,7 @@
         app:layout_constraintHeight_percent="0.085"
         app:layout_constraintWidth_percent="0.4"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_green"
-        android:backgroundTint="@color/softlock_green"
+        android:background="@color/grey"
         android:gravity="center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
@@ -229,8 +224,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_white"
-        android:backgroundTint="@color/clip_white"
+        android:background="@color/grey"
         android:gravity="center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
@@ -247,7 +241,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_red"
+        android:background="@color/grey"
         android:gravity="left|center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
@@ -265,7 +259,7 @@
         android:layout_height="0dp"
         app:layout_constraintHeight_percent="0.085"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_yellow"
+        android:background="@color/grey"
         android:gravity="center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
@@ -281,7 +275,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="5dp"
-        android:background="@color/clip_orange"
+        android:background="@color/grey"
         android:gravity="center_vertical"
         android:text="18 ozs"
         android:textAlignment="gravity"
